test/pass/test_first_class_module2.sest
module TestFirstClassModule2 :> sig
  signature Ord = sig
    type t
    val compare : fun(t, t) -> int
  end
end = struct
  signature Ord = sig
    type t
    val compare : fun(t, t) -> int
  end
end
